# opencv_ffmpeg_streaming

./: .gitignore  CMakeLists.txt  main.c  main.cpp
copy_to_ffmpeg_exe/: example_rtp.txt  foo.sdp
streamer/: streamer.cpp  streamer.hpp
